--- a/config/config.ini
+++ b/config/config.ini
@@ -4,18 +4,19 @@ source_vocab_path = data/fra-eng/source_vocab
 target_vocab_path = data/fra-eng/target_vocab
 
 [trainer]
-batch_size = 64
+batch_size = 128
 max_len = 10
-epochs = 200
+epochs = 100
 pad_value = 1
-device = cpu
+learning_rate = 0.001
+device = cuda
 
 [model]
-num_hiddens = 32
-ffn_num_hiddens = 64
+num_hiddens = 128
+ffn_num_hiddens = 512
 num_heads = 4
-encoder_layers = 4
-decoder_layers = 4
+encoder_layers = 6
+decoder_layers = 6
 dropout = 0.1
 use_bias = False
 
