--- a/config/config.ini
+++ b/config/config.ini
@@ -21,6 +21,10 @@ dropout = 0.1
 use_bias = False
 
 [save]
-model_trace_path = saved_models/model_trace.pt
-model_entire_path = saved_models/model_entire.pt
-model_stat_dict_path = saved_models/model_stat_dict.pt
+model1_trace_path = saved_models/model_trace.pt
+model1_entire_path = saved_models/model_entire.pt
+model1_stat_dict_path = saved_models/model_stat_dict.pt
+model2_trace_path = saved_models/model2_trace.pt
+model2_entire_path = saved_models/model2_entire.pt
+model2_onnx_path = saved_models/model2.onnx
+model2_trtengine_path = saved_models/model2.trt
