--- a/config/config.ini
+++ b/config/config.ini
@@ -4,7 +4,7 @@ source_vocab_path = data/fra-eng/source_vocab
 target_vocab_path = data/fra-eng/target_vocab
 
 [trainer]
-batch_size = 128
+batch_size = 64
 max_len = 10
 epochs = 100
 pad_value = 1
@@ -24,7 +24,10 @@ use_bias = False
 model1_trace_path = saved_models/model_trace.pt
 model1_entire_path = saved_models/model_entire.pt
 model1_stat_dict_path = saved_models/model_stat_dict.pt
+model1_onnx_path = saved_models/model.onnx
+model1_engine_path = saved_models/model.trt
+
 model2_trace_path = saved_models/model2_trace.pt
 model2_entire_path = saved_models/model2_entire.pt
 model2_onnx_path = saved_models/model2.onnx
-model2_trtengine_path = saved_models/model2.trt
+model2_engine_path = saved_models/model2.trt
